# ProstateCancerPrognosisAI

./: .gitignore  Dockerfile  README.md  h5py_converter.py  requirements.txt  requirements_docker.txt
applications/: 00_create_database.py  01_create_holdout_set.py  01_create_learning_and_holdout_tables.py  01_extract_radiomics.py  01_generate_outliers_records.py  02_generate_descriptive_analyses.py  02_generate_outliers_records.py  03_generate_descriptive_analyses.py  03_generate_masks.py  04_generate_masks.py  04_test.py  04_train_mlp.py  05_train_mlp.py  05_tune_mlp.py  06_02_train_mlp_evaluator_test.py  06_2_train_mlp_explainer.py  06_train_cnn.py  06_train_mlp.py  06_tune_mlp.py  06_tune_mlp_unet.py  07_train_cnn.py  07_train_unet.py  07_tune_mlp.py  07_tune_mlp_unet.py  08_train_cnn.py  08_train_multi_net.py  08_train_unet.py  09_train_multi_net.py  09_train_unet.py  09_train_unextractor.py  09_tune_mlp_clinical_data_only.py  10_train_multi_net.py  10_tune_cnn_radiomics_only.py  10_tune_mlp_clinical_data_only.py  11_tune_cnn.py  11_tune_cnn_radiomics_only.py  11_tune_extractor_and_predictor.py  11_tune_multi_net.py  12_tune_cnn_radiomics_only.py  12_tune_unextractor.py  (+49 more)
applications/archive/: images_range_adjustment.ipynb  single_patient_analysis_holdout.py
applications/archive/CNN/: job_BCR.sh  job_CRPC.sh  job_DEATH.sh  job_HTX.sh  job_METASTASIS.sh  job_PN.sh  main_BCR.py  main_CRPC.py  main_DEATH.py  main_HTX.py  main_METASTASIS.py  main_PN.py
applications/archive/UNEXtractor/: job_BCR.sh  job_CRPC.sh  job_DEATH.sh  job_HTX.sh  job_METASTASIS.sh  job_PN.sh  (+6 more)
(+465 files in other folders)
