[build-system]
requires = ["numpy", "matplotlib>=3",]
build-backend = "setuptools.build_meta"

[project]
name = "package_name"
dynamic = ["version", ]
description = "A small example package"
authors = [{ name="Example Author", email="author@example.com" }, ]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
  "numpy",
  "matplotlib>=3",
]

[tool.setuptools.dynamic]
version = {attr = "0.0.1"}
readme = {file = ["README.md"]}

[project.urls]
homepage = "https://github.com/pypa/sampleproject"

[tool.setuptools]
package-dir = {"" = "package_name"}

[tool.setuptools.packages.find]
where = ["package_name"]